src/main/java/com/parser/MinionParser.java
// Generated from Minion.g4 by ANTLR 4.7.2
package com.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MinionParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, FLOAT=3, VOID=4, MAIN=5, PRINT=6, IF=7, FOR=8, ELSE=9, 
		TRUE=10, FALSE=11, OR=12, AND=13, IGUALACION=14, DIFERENTE=15, MAYOR=16, 
		MENOR=17, MAYORIGUAL=18, MENORIGUAL=19, IGUAL=20, POW=21, SQRT=22, SUM=23, 
		RES=24, MUL=25, DIV=26, PA=27, PC=28, LA=29, LC=30, COMMENT=31, COMMENTLINEA=32, 
		ID=33, NUMERO=34, STRING=35, WS=36;
	public static final int
		RULE_programa = 0, RULE_encabezado = 1, RULE_instrucciones = 2, RULE_declaracion = 3, 
		RULE_declaracion2 = 4, RULE_impresion2 = 5, RULE_impresion = 6, RULE_asignacion = 7, 
		RULE_ifBasico = 8, RULE_elseBasico = 9, RULE_elseif = 10, RULE_forBasico = 11, 
		RULE_condicion = 12, RULE_expr = 13, RULE_tipo_dato = 14, RULE_incremento = 15;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "encabezado", "instrucciones", "declaracion", "declaracion2", 
			"impresion2", "impresion", "asignacion", "ifBasico", "elseBasico", "elseif", 
			"forBasico", "condicion", "expr", "tipo_dato", "incremento"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'!'", "'dul'", "'papoi'", "'banana'", "'poopaye'", "'hana'", 
			"'chasy'", "'sae'", "'True'", "'False'", "'||'", "'&&'", "'=='", "'!='", 
			"'>'", "'<'", "'>='", "'<='", "'='", "'**'", "'*/'", "'+'", "'-'", "'*'", 
			"'/'", "'('", "')'", "'{'", "'}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, "FLOAT", "VOID", "MAIN", "PRINT", "IF", "FOR", "ELSE", 
			"TRUE", "FALSE", "OR", "AND", "IGUALACION", "DIFERENTE", "MAYOR", "MENOR", 
			"MAYORIGUAL", "MENORIGUAL", "IGUAL", "POW", "SQRT", "SUM", "RES", "MUL", 
			"DIV", "PA", "PC", "LA", "LC", "COMMENT", "COMMENTLINEA", "ID", "NUMERO", 
			"STRING", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Minion.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MinionParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramaContext extends ParserRuleContext {
		public EncabezadoContext encabezado() {
			return getRuleContext(EncabezadoContext.class,0);
		}
		public TerminalNode LA() { return getToken(MinionParser.LA, 0); }
		public InstruccionesContext instrucciones() {
			return getRuleContext(InstruccionesContext.class,0);
		}
		public TerminalNode LC() { return getToken(MinionParser.LC, 0); }
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MinionVisitor ) return ((MinionVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			encabezado();
			setState(33);
			match(LA);
			setState(34);
			instrucciones();
			setState(35);
			match(LC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EncabezadoContext extends ParserRuleContext {
		public EncabezadoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_encabezado; }
	 
		public EncabezadoContext() { }
		public void copyFrom(EncabezadoContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class EncabechadContext extends EncabezadoContext {
		public TerminalNode VOID() { return getToken(MinionParser.VOID, 0); }
		public TerminalNode MAIN() { return getToken(MinionParser.MAIN, 0); }
		public TerminalNode PA() { return getToken(MinionParser.PA, 0); }
		public TerminalNode PC() { return getToken(MinionParser.PC, 0); }
		public EncabechadContext(EncabezadoContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MinionVisitor ) return ((MinionVisitor<? extends T>)visitor).visitEncabechad(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EncabezadoContext encabezado() throws RecognitionException {
		EncabezadoContext _localctx = new EncabezadoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_encabezado);
		try {
			_localctx = new EncabechadContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(37);
			match(VOID);
			setState(38);
			match(MAIN);
			setState(39);
			match(PA);
			setState(40);
			match(PC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstruccionesContext extends ParserRuleContext {
		public List<AsignacionContext> asignacion() {
			return getRuleContexts(AsignacionContext.class);
		}
		public AsignacionContext asignacion(int i) {
			return getRuleContext(AsignacionContext.class,i);
		}
		public List<DeclaracionContext> declaracion() {
			return getRuleContexts(DeclaracionContext.class);
		}
		public DeclaracionContext declaracion(int i) {
			return getRuleContext(DeclaracionContext.class,i);
		}
		public List<Declaracion2Context> declaracion2() {
			return getRuleContexts(Declaracion2Context.class);
		}
		public Declaracion2Context declaracion2(int i) {
			return getRuleContext(Declaracion2Context.class,i);
		}
		public List<ImpresionContext> impresion() {
			return getRuleContexts(ImpresionContext.class);
		}
		public ImpresionContext impresion(int i) {
			return getRuleContext(ImpresionContext.class,i);
		}
		public List<Impresion2Context> impresion2() {
			return getRuleContexts(Impresion2Context.class);
		}
		public Impresion2Context impresion2(int i) {
			return getRuleContext(Impresion2Context.class,i);
		}
		public List<IfBasicoContext> ifBasico() {
			return getRuleContexts(IfBasicoContext.class);
		}
		public IfBasicoContext ifBasico(int i) {
			return getRuleContext(IfBasicoContext.class,i);
		}
		public List<ForBasicoContext> forBasico() {
			return getRuleContexts(ForBasicoContext.class);
		}
		public ForBasicoContext forBasico(int i) {
			return getRuleContext(ForBasicoContext.class,i);
		}
		public InstruccionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instrucciones; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MinionVisitor ) return ((MinionVisitor<? extends T>)visitor).visitInstrucciones(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstruccionesContext instrucciones() throws RecognitionException {
		InstruccionesContext _localctx = new InstruccionesContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_instrucciones);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FLOAT) | (1L << PRINT) | (1L << IF) | (1L << FOR) | (1L << ID))) != 0)) {
				{
				setState(49);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(42);
					asignacion();
					}
					break;
				case 2:
					{
					setState(43);
					declaracion();
					}
					break;
				case 3:
					{
					setState(44);
					declaracion2();
					}
					break;
				case 4:
					{
					setState(45);
					impresion();
					}
					break;
				case 5:
					{
					setState(46);
					impresion2();
					}
					break;
				case 6:
					{
					setState(47);
					ifBasico();
					}
					break;
				case 7:
					{
					setState(48);
					forBasico();
					}
					break;
				}
				}
				setState(53);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaracionContext extends ParserRuleContext {
		public DeclaracionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion; }
	 
		public DeclaracionContext() { }
		public void copyFrom(DeclaracionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DeclaracionSimpleContext extends DeclaracionContext {
		public Tipo_datoContext tipo_dato() {
			return getRuleContext(Tipo_datoContext.class,0);
		}
		public TerminalNode ID() { return getToken(MinionParser.ID, 0); }
		public DeclaracionSimpleContext(DeclaracionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MinionVisitor ) return ((MinionVisitor<? extends T>)visitor).visitDeclaracionSimple(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracionContext declaracion() throws RecognitionException {
		DeclaracionContext _localctx = new DeclaracionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declaracion);
		try {
			_localctx = new DeclaracionSimpleContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			tipo_dato();
			setState(55);
			match(ID);
			setState(56);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declaracion2Context extends ParserRuleContext {
		public Declaracion2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion2; }
	 
		public Declaracion2Context() { }
		public void copyFrom(Declaracion2Context ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DeclaracionAsignacionContext extends Declaracion2Context {
		public Tipo_datoContext tipo_dato() {
			return getRuleContext(Tipo_datoContext.class,0);
		}
		public TerminalNode ID() { return getToken(MinionParser.ID, 0); }
		public TerminalNode IGUAL() { return getToken(MinionParser.IGUAL, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public DeclaracionAsignacionContext(Declaracion2Context ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MinionVisitor ) return ((MinionVisitor<? extends T>)visitor).visitDeclaracionAsignacion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declaracion2Context declaracion2() throws RecognitionException {
		Declaracion2Context _localctx = new Declaracion2Context(_ctx, getState());
		enterRule(_localctx, 8, RULE_declaracion2);
		try {
			_localctx = new DeclaracionAsignacionContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			tipo_dato();
			setState(59);
			match(ID);
			setState(60);
			match(IGUAL);
			setState(61);
			expr(0);
			setState(62);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Impresion2Context extends ParserRuleContext {
		public Impresion2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_impresion2; }
	 
		public Impresion2Context() { }
		public void copyFrom(Impresion2Context ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ImpresionStringContext extends Impresion2Context {
		public TerminalNode PRINT() { return getToken(MinionParser.PRINT, 0); }
		public TerminalNode PA() { return getToken(MinionParser.PA, 0); }
		public TerminalNode STRING() { return getToken(MinionParser.STRING, 0); }
		public TerminalNode PC() { return getToken(MinionParser.PC, 0); }
		public ImpresionStringContext(Impresion2Context ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MinionVisitor ) return ((MinionVisitor<? extends T>)visitor).visitImpresionString(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Impresion2Context impresion2() throws RecognitionException {
		Impresion2Context _localctx = new Impresion2Context(_ctx, getState());
		enterRule(_localctx, 10, RULE_impresion2);
		try {
			_localctx = new ImpresionStringContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			match(PRINT);
			setState(65);
			match(PA);
			setState(66);
			match(STRING);
			setState(67);
			match(PC);
			setState(68);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImpresionContext extends ParserRuleContext {
		public ImpresionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_impresion; }
	 
		public ImpresionContext() { }
		public void copyFrom(ImpresionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ImpresionExprContext extends ImpresionContext {
		public TerminalNode PRINT() { return getToken(MinionParser.PRINT, 0); }
		public TerminalNode PA() { return getToken(MinionParser.PA, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode PC() { return getToken(MinionParser.PC, 0); }
		public ImpresionExprContext(ImpresionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MinionVisitor ) return ((MinionVisitor<? extends T>)visitor).visitImpresionExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImpresionContext impresion() throws RecognitionException {
		ImpresionContext _localctx = new ImpresionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_impresion);
		try {
			_localctx = new ImpresionExprContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			match(PRINT);
			setState(71);
			match(PA);
			setState(72);
			expr(0);
			setState(73);
			match(PC);
			setState(74);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AsignacionContext extends ParserRuleContext {
		public AsignacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asignacion; }
	 
		public AsignacionContext() { }
		public void copyFrom(AsignacionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AsignacionChadContext extends AsignacionContext {
		public TerminalNode ID() { return getToken(MinionParser.ID, 0); }
		public TerminalNode IGUAL() { return getToken(MinionParser.IGUAL, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AsignacionChadContext(AsignacionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MinionVisitor ) return ((MinionVisitor<? extends T>)visitor).visitAsignacionChad(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AsignacionContext asignacion() throws RecognitionException {
		AsignacionContext _localctx = new AsignacionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_asignacion);
		try {
			_localctx = new AsignacionChadContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(ID);
			setState(77);
			match(IGUAL);
			setState(78);
			expr(0);
			setState(79);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfBasicoContext extends ParserRuleContext {
		public IfBasicoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifBasico; }
	 
		public IfBasicoContext() { }
		public void copyFrom(IfBasicoContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class IfChadContext extends IfBasicoContext {
		public TerminalNode IF() { return getToken(MinionParser.IF, 0); }
		public TerminalNode PA() { return getToken(MinionParser.PA, 0); }
		public CondicionContext condicion() {
			return getRuleContext(CondicionContext.class,0);
		}
		public TerminalNode PC() { return getToken(MinionParser.PC, 0); }
		public TerminalNode LA() { return getToken(MinionParser.LA, 0); }
		public InstruccionesContext instrucciones() {
			return getRuleContext(InstruccionesContext.class,0);
		}
		public TerminalNode LC() { return getToken(MinionParser.LC, 0); }
		public List<ElseifContext> elseif() {
			return getRuleContexts(ElseifContext.class);
		}
		public ElseifContext elseif(int i) {
			return getRuleContext(ElseifContext.class,i);
		}
		public ElseBasicoContext elseBasico() {
			return getRuleContext(ElseBasicoContext.class,0);
		}
		public IfChadContext(IfBasicoContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MinionVisitor ) return ((MinionVisitor<? extends T>)visitor).visitIfChad(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfBasicoContext ifBasico() throws RecognitionException {
		IfBasicoContext _localctx = new IfBasicoContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_ifBasico);
		int _la;
		try {
			int _alt;
			_localctx = new IfChadContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(IF);
			setState(82);
			match(PA);
			setState(83);
			condicion(0);
			setState(84);
			match(PC);
			setState(85);
			match(LA);
			setState(86);
			instrucciones();
			setState(87);
			match(LC);
			setState(91);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(88);
					elseif();
					}
					} 
				}
				setState(93);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(94);
				elseBasico();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElseBasicoContext extends ParserRuleContext {
		public ElseBasicoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elseBasico; }
	 
		public ElseBasicoContext() { }
		public void copyFrom(ElseBasicoContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ElseChadContext extends ElseBasicoContext {
		public TerminalNode ELSE() { return getToken(MinionParser.ELSE, 0); }
		public TerminalNode LA() { return getToken(MinionParser.LA, 0); }
		public InstruccionesContext instrucciones() {
			return getRuleContext(InstruccionesContext.class,0);
		}
		public TerminalNode LC() { return getToken(MinionParser.LC, 0); }
		public ElseChadContext(ElseBasicoContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MinionVisitor ) return ((MinionVisitor<? extends T>)visitor).visitElseChad(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ElseBasicoContext elseBasico() throws RecognitionException {
		ElseBasicoContext _localctx = new ElseBasicoContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_elseBasico);
		try {
			_localctx = new ElseChadContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(ELSE);
			setState(98);
			match(LA);
			setState(99);
			instrucciones();
			setState(100);
			match(LC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElseifContext extends ParserRuleContext {
		public ElseifContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elseif; }
	 
		public ElseifContext() { }
		public void copyFrom(ElseifContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ElseifChadContext extends ElseifContext {
		public TerminalNode ELSE() { return getToken(MinionParser.ELSE, 0); }
		public TerminalNode IF() { return getToken(MinionParser.IF, 0); }
		public TerminalNode PA() { return getToken(MinionParser.PA, 0); }
		public CondicionContext condicion() {
			return getRuleContext(CondicionContext.class,0);
		}
		public TerminalNode PC() { return getToken(MinionParser.PC, 0); }
		public TerminalNode LA() { return getToken(MinionParser.LA, 0); }
		public InstruccionesContext instrucciones() {
			return getRuleContext(InstruccionesContext.class,0);
		}
		public TerminalNode LC() { return getToken(MinionParser.LC, 0); }
		public ElseifChadContext(ElseifContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MinionVisitor ) return ((MinionVisitor<? extends T>)visitor).visitElseifChad(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ElseifContext elseif() throws RecognitionException {
		ElseifContext _localctx = new ElseifContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_elseif);
		try {
			_localctx = new ElseifChadContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(ELSE);
			setState(103);
			match(IF);
			setState(104);
			match(PA);
			setState(105);
			condicion(0);
			setState(106);
			match(PC);
			setState(107);
			match(LA);
			setState(108);
			instrucciones();
			setState(109);
			match(LC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ForBasicoContext extends ParserRuleContext {
		public ForBasicoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_forBasico; }
	 
		public ForBasicoContext() { }
		public void copyFrom(ForBasicoContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ForChadContext extends ForBasicoContext {
		public TerminalNode FOR() { return getToken(MinionParser.FOR, 0); }
		public TerminalNode PA() { return getToken(MinionParser.PA, 0); }
		public Declaracion2Context declaracion2() {
			return getRuleContext(Declaracion2Context.class,0);
		}
		public CondicionContext condicion() {
			return getRuleContext(CondicionContext.class,0);
		}
		public IncrementoContext incremento() {
			return getRuleContext(IncrementoContext.class,0);
		}
		public TerminalNode PC() { return getToken(MinionParser.PC, 0); }
		public TerminalNode LA() { return getToken(MinionParser.LA, 0); }
		public InstruccionesContext instrucciones() {
			return getRuleContext(InstruccionesContext.class,0);
		}
		public TerminalNode LC() { return getToken(MinionParser.LC, 0); }
		public ForChadContext(ForBasicoContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MinionVisitor ) return ((MinionVisitor<? extends T>)visitor).visitForChad(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ForBasicoContext forBasico() throws RecognitionException {
		ForBasicoContext _localctx = new ForBasicoContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_forBasico);
		try {
			_localctx = new ForChadContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(FOR);
			setState(112);
			match(PA);
			setState(113);
			declaracion2();
			setState(114);
			condicion(0);
			setState(115);
			match(T__0);
			setState(116);
			incremento();
			setState(117);
			match(PC);
			setState(118);
			match(LA);
			setState(119);
			instrucciones();
			setState(120);
			match(LC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
